# swagger_server/controllers/default_controller.py
@@ -54,3 +54,18 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
         return res
     return 'Not Found', 404
 
+
+def get_student_by_last_name(last_name):
+    """Find student by last name
+
+    Returns a single student # noqa: E501
+
+    :param last_name: last name of student to return
+    :type last_name: string
+
+    :rtype: Student
+    """
+    res = student_service.get_student_by_last_name(last_name)
+    if res:
+        return res
+    return 'Not Found', 404
